# sqlserver-semantic-mcp

./: .env.example  .gitignore  README.md  README.zh-TW.md  pyproject.toml
docs/superpowers/specs/: 2026-04-19-p0-token-optimization-design.md  2026-04-19-p1-response-contract-reset-design.md  2026-04-19-p2-p3-surface-and-summarization-design.md
sqlserver_semantic_mcp/: config.py
sqlserver_semantic_mcp/infrastructure/cache/: semantic.py  store.py  structural.py
sqlserver_semantic_mcp/server/: app.py
sqlserver_semantic_mcp/server/resources/: schema.py
sqlserver_semantic_mcp/server/tools/: __init__.py  metrics.py  object_tool.py  semantic.py  shape.py
sqlserver_semantic_mcp/services/: metadata_service.py  metrics_service.py  object_service.py  relationship_service.py  semantic_service.py
tests/unit/: test_call_tool_metrics.py  test_config.py  test_list_resources.py  test_metrics_service.py  test_object_service.py  test_object_tool.py  test_object_write_intent.py  test_policy_service.py  test_summarize_joining.py  test_tool_filters.py  test_tool_shapes.py
