[project]
name = "sqlserver-semantic-mcp"
version = "0.5.0"
description = "Semantic intelligence layer for SQL Server databases, exposed via MCP. A database understanding engine for AI agents (Claude Code CLI, Codex CLI, Claude Desktop, etc.)."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Luke", email = "popo555155@gmail.com"},
]
keywords = [
    "mcp",
    "model-context-protocol",
    "sql-server",
    "mssql",
    "claude",
    "claude-code",
    "codex",
    "ai-agent",
    "semantic",
    "database",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.0.0",
    "pymssql>=2.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/lukedev999-boom/sqlserver-semantic-mcp"
Repository = "https://github.com/lukedev999-boom/sqlserver-semantic-mcp"
Issues = "https://github.com/lukedev999-boom/sqlserver-semantic-mcp/issues"
Documentation = "https://github.com/lukedev999-boom/sqlserver-semantic-mcp#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.0.0",
]

[project.scripts]
sqlserver-semantic-mcp = "sqlserver_semantic_mcp.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sqlserver_semantic_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: requires live SQL Server"
]
